# standup

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  run_standup.py  standup.example.toml
standup/: config.py  registry.py  runner.py  utils.py
standup/providers/: __init__.py  asana.py  github.py  jira.py
