[tool.poetry]
name = "standup"
version = "0.1.0"
description = "Automated standups to show what you've done and (maybe) what you're doing next."
authors = ["Michael Thompson <actionscripted@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
asana = "^3.2.2"
jira = "^3.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
